# bevy_dungeon_crawler

./: CLAUDE.md  Cargo.toml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
bevy_fov/: Cargo.toml
bevy_fov/src/: lib.rs
doc/: design.md
game_core/: Cargo.toml
game_core/src/: lib.rs
game_core/src/components/: action_components.rs  ai_components.rs  combat_components.rs  fov_components.rs  inventory_components.rs  item_components.rs  map_components.rs  mod.rs  pathfinding_components.rs  player_components.rs  system_components.rs
game_core/src/components/map_builder/: automata.rs  drunkard.rs  dungeon.rs  empty.rs  mod.rs  prefab.rs  themes.rs
game_core/src/systems/: build_map.rs  calc_fov.rs  end_turn.rs  mod.rs  monster_chase_player.rs  monster_think.rs  monster_wander.rs  move_figure.rs  pickup_item.rs  player_input.rs  player_input_end_game.rs  reveal_map.rs  spawn_amulet_of_yala.rs  spawn_monsters.rs  spawn_player.rs  system_cleanup.rs  system_pre_cleanup.rs  take_damage.rs  take_rest.rs  use_item.rs
game_starter/: Cargo.toml
game_starter/src/: main.rs
game_ui/: Cargo.toml
game_ui/src/: lib.rs
game_ui/src/components/: mod.rs  sprite_components.rs  ui_components.rs
game_ui/src/systems/: build_game_over_ui.rs  build_in_game_ui.rs  build_victory_ui.rs  despawn_in_game_ui.rs  hide_tooltip.rs  load_assets.rs  map_pos_to_trans.rs  mod.rs  remove_sprite_from_map.rs  spawn_amulet_of_yala_sprite.rs  spawn_camera.rs  spawn_item_sprites.rs  spawn_monster_sprites.rs  spawn_player_sprite.rs  spawn_tilemap.rs  spawn_tooltip.rs  update_camera.rs  update_cursor_position.rs  update_in_game_ui_inventory.rs  update_in_game_ui_player_health.rs  update_in_game_ui_tooltip.rs  update_monster_fov.rs  update_non_player_fov.rs  update_tilemap_fov.rs
src/: main.rs
