[package]
name = "bevy-dungeon-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# FIXME: remove dynamic_linking upon releasing
bevy = { version = "^0.12", features = ["dynamic_linking"] }
game_core = { path = "game_core" }
game_ui = { path = "game_ui" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
