[workspace]
members = ["bevy_fov", "game_core", "game_ui", "game_starter"]
default-members = ["game_starter"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
# FIXME: remove dynamic_linking upon releasing
bevy = { version = "^0.12", features = ["dynamic_linking"] }
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }
rand = "^0.8"
pathfinding = "^4.4"
game_core = { path = "game_core" }
game_ui = { path = "game_ui" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
needless_pass_by_value = "allow"
