[package]
name = "game_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
rand.workspace = true
pathfinding.workspace = true
bevy_fov = { path = "../bevy_fov" }

[lints]
workspace = true
