[package]
name = "bevy-dungeon-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
game_core = { path = "../game_core" }
game_ui = { path = "../game_ui" }

[lints]
workspace = true
